Changed the HTML for the site.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,21 +1,33 @@
   <html>
         <head>
-            <title>Django Girls blog</title>
+            <title>Deadagent</title>
         </head>
         <body>
             <div>
-                <h1><a href="">Django Girls Blog</a></h1>
+                <h1><a href="">Площадка deadagent</a></h1>
             </div>
 
             <div>
-                <p>published: 14.06.2014, 12:14</p>
-                <h2><a href="">My first post</a></h2>
-                <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <p>published: 14.06.2017, 12:14</p>
+                <h2><a href="">Миссия проекта</a></h2>
+                <p>Максимально сократить участие агентов-посредников в алгоритме размещения объявлений о здаче жилой площади в аренду от собственников. 
+
+Как планируем выполнить миссию - данные на площадку deadagent.io будут размещаться бесплатно для конечного пользователя.</p>
             </div>
 
             <div>
-                <p>published: 14.06.2014, 12:14</p>
-                <h2><a href="">My second post</a></h2>
-                <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
+                <p>published: 14.06.2017, 12:14</p>
+                <h2><a href="">Принцип работы </a></h2>
+                <p>Сбор информации посредством скрипта с таких источников как: соцсети, тематические площадки, форумы, площадки для размещения объявлений.</p>
+            </div>
+            <div>
+                <p>published: 14.06.2017, 12:14</p>
+                <h2><a href="">Формат площадки</a></h2>
+                <p>Единая лента с объявлениями (блог).
+
+Пользовательский функционал версии 0.1 Alpha:
+
+Фильтр поиска объявлений в базе
+Возможность для пользователя отметить объявление, если его разместил агент, для последующей проверки модератором</p>
             </div>
         </body>
