Modified templates to display posts from database.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,30 +4,31 @@
         </head>
         <body>
             <div>
-                <h1><a href="">Площадка deadagent</a></h1>
+        <h1><a href="/">Deadagent</a></h1>
+           </div>
+            <div>
+                <h2>Описание проекта</h2>
+                <p>Агрегатор информации о недвижимости, которую размещают в сети без посредников.</p>
+            </div>
+            <div>
+                <h2>Миссия проекта</h2>
+                <p>Максимально сократить участие агентов-посредников в алгоритме размещения объявлений о здаче жилой площади в аренду от собственников. Как планируем выполнить миссию - данные на площадку deadagent.io будут размещаться бесплатно для конечного пользователя.</p>
             </div>
 
-            <div>
-                <p>published: 14.06.2017, 12:14</p>
-                <h2><a href="">Миссия проекта</a></h2>
-                <p>Максимально сократить участие агентов-посредников в алгоритме размещения объявлений о здаче жилой площади в аренду от собственников. 
-
-Как планируем выполнить миссию - данные на площадку deadagent.io будут размещаться бесплатно для конечного пользователя.</p>
-            </div>
-
-            <div>
-                <p>published: 14.06.2017, 12:14</p>
-                <h2><a href="">Принцип работы </a></h2>
+             <div>
+                <h2>Принцип работы</h2>
                 <p>Сбор информации посредством скрипта с таких источников как: соцсети, тематические площадки, форумы, площадки для размещения объявлений.</p>
             </div>
-            <div>
-                <p>published: 14.06.2017, 12:14</p>
-                <h2><a href="">Формат площадки</a></h2>
-                <p>Единая лента с объявлениями (блог).
-
-Пользовательский функционал версии 0.1 Alpha:
-
-Фильтр поиска объявлений в базе
-Возможность для пользователя отметить объявление, если его разместил агент, для последующей проверки модератором</p>
+             <div>
+                <h2>Формат площадки</h2>
+                <p>Единая лента с объявлениями (блог). Пользовательский функционал версии 0.1 Alpha: <br /> 1.Фильтр поиска объявлений в базе; <br /> 2.Возможность для пользователя отметить объявление, если его разместил агент, для последующей проверки модератором.</p>
             </div>
+    {% for post in posts %}
+        <div>
+            <h3><a href="">{{ post.title }}</a></h3>
+            <p>{{ post.text|linebreaksbr }}</p>
+             <p>published: {{ post.published_date }}</p>
+        </div>
+    {% endfor %}
         </body>
+ </html>
