Added view and template for detailed blog post as well as CSS for the site.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,13 @@
-  <html>
-        <head>
-            <title>Deadagent</title>
-        </head>
+ {% extends 'blog/base.html' %}
+  {% block content %}
         <body>
-            <div>
-        <h1><a href="/">Deadagent</a></h1>
-           </div>
             <div>
                 <h2>Описание проекта</h2>
                 <p>Агрегатор информации о недвижимости, которую размещают в сети без посредников.</p>
             </div>
             <div>
                 <h2>Миссия проекта</h2>
-                <p>Максимально сократить участие агентов-посредников в алгоритме размещения объявлений о здаче жилой площади в аренду от собственников. Как планируем выполнить миссию - данные на площадку deadagent.io будут размещаться бесплатно для конечного пользователя.</p>
+                <p>Максимально сократить участие агентов-посредников в алгоритме размещения объявлений о здаче жилой площади в аренду от собственников.  <br />Как планируем выполнить миссию - данные на площадку deadagent.io будут размещаться бесплатно для конечного пользователя.</p>
             </div>
 
              <div>
@@ -23,12 +18,21 @@
                 <h2>Формат площадки</h2>
                 <p>Единая лента с объявлениями (блог). Пользовательский функционал версии 0.1 Alpha: <br /> 1.Фильтр поиска объявлений в базе; <br /> 2.Возможность для пользователя отметить объявление, если его разместил агент, для последующей проверки модератором.</p>
             </div>
-    {% for post in posts %}
-        <div>
-            <h3><a href="">{{ post.title }}</a></h3>
-            <p>{{ post.text|linebreaksbr }}</p>
-             <p>published: {{ post.published_date }}</p>
+    <div class="content container">
+        <div class="row">
+            <div class="col-md-8">
+                {% for post in posts %}
+                    <div class="post">
+                        <div class="date">
+                            {{ post.published_date }}
+                        </div>
+                        <h3><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h3>
+                        <p>{{ post.text|linebreaksbr }}</p>
+                    </div>
+                {% endfor %}
+            </div>
         </div>
-    {% endfor %}
+    </div>
         </body>
- </html>
+{% endblock content %}
+
