--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,6 +12,10 @@
          <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
          <link rel="stylesheet" href="{% static 'css/blog.css' %}">
         </head>
+        <div class="top-menu">
+        <nav><a href="1.html">Контакты</a> | <a href="2.html">О нас</a> |
+       <a href="3.html">Разместить объявление</a></nav> 
+       </div>
         <body>       
            <div class="page-header">
              <h1><a href="/">Dead<span class="colortext">agent</span></a></h1>
