--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -40,10 +40,10 @@ body {
         width: 100%;
     }
 
-    .top-menu, .top-menu:hover, .top-menu:visited {
+    .top-menu, .top-menu, .top-menu {
         color: #ffffff;
         float: right;
-        font-size: 26pt;
+        font-size: 10pt;
         margin-right: 20px;
     }
 
@@ -54,3 +54,5 @@ body {
     .post h3 a, .post h3 a:visited {
         color: #000000;
     }
+
+    
