--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,10 +2,6 @@
   <html>
         <head>
          <title>Deadagent</title>
-   <style>
-   .colortext {
-     color: #FCA205;
-  </style> 
          <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
          <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic" rel="stylesheet" type="text/css">
          <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -13,8 +9,8 @@
          <link rel="stylesheet" href="{% static 'css/blog.css' %}">
         </head>
         <div class="top-menu">
-        <nav><a href="1.html">Контакты</a> | <a href="2.html">О нас</a> |
-       <a href="3.html">Разместить объявление</a></nav> 
+        <a href="1.html" class="colormenu">Контакты</a> | <a href="2.html" class="colormenu">О нас</a> | 
+       <a href="3.html" class="colormenu">Разместить объявление</a></span> 
        </div>
         <body>       
            <div class="page-header">
