--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -40,11 +40,11 @@ body {
         width: 100%;
     }
 
-    .top-menu, .top-menu, .top-menu {
+    .top-menu{
         color: #ffffff;
         float: right;
         font-size: 10pt;
-        margin-right: 20px;
+        margin-right: 10px;
     }
 
     .post {
@@ -55,4 +55,10 @@ body {
         color: #000000;
     }
 
-    
+   .colortext {
+     color: #FCA205;
+     }
+
+    .colormenu {
+     color: #ffffff;
+     }
